[package]
name = "rust-example"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
async-global-executor = "^2.0"
tokio = { version = "1.17.0", features = ["full"] }
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"